Make session switching work. If there are no problems (and there should not be), I will backport.

BUG: 152805

svn path=/trunk/KDE/kdebase/workspace/; revision=769905